--- a/app/views/debts/index.html.erb
+++ b/app/views/debts/index.html.erb
@@ -6,7 +6,7 @@
       <h3 class="fw-bold">Debt <%= index + 1 %></h3>
       <p class=fs-6>Original principal</p>
       <p class="fs-5 fw-bold"><%= number_to_currency(debt.original_principal, unit:"¥", precision:0) %></p>
-      <%= link_to "Dashbord", payment_options_dashboard_debt_path(debt.id), class: "btn btn-select" %>
+      <%= link_to "Dashbord", payment_options_dashboard_debt_path(debt.id), class: "btn btn-select", style: "align-items: center;" %>
     </div>
   <% end %>
 </div>
