--- a/app/views/payment_options/dashboard.html.erb
+++ b/app/views/payment_options/dashboard.html.erb
@@ -9,7 +9,7 @@
     </div>
 
     <div class="row payment mt-3">
-      <div class="payment-date col-6">
+      <div class="payment-date col-12">
         <% @selected_payment_options.each do |option| %>
           <% option.payments.each do |payment| %>
             <% if payment.status === 1 %>
@@ -23,7 +23,7 @@
             <div class="mt-3">
               <% if payment.status === 1 %>
                 <h6>Did you pay this Month?</h6>
-                <%= link_to "YES! I did!", payment_options_paid_path(debt_id: @debt.id, payment: true), data: { turbo: false }, class: "btn btn-select" %>
+                <%= link_to "YES! I did!", payment_options_paid_path(debt_id: @debt.id, payment: true), data: { turbo: false }, class: "btn btn-select", style: "align-items: center;" %>
               <% elsif payment.status === 3 %>
                 <h5>Good Job and No Debt Anymore!</h5>
                 <%= image_tag 'celebrate.svg', style: 'height:200px;width:auto;'%>
@@ -41,7 +41,7 @@
 <% @selected_payment_options.each do |option| %>
   <div class="containr">
     <div class="row d-flex justify-content-center pc-info-cards">
-      <div class="col-2 pc-info-card align-items-center">
+      <div class="col-12 col-md-6 col-xl-2 pc-info-card align-items-center">
           <i class="fa-solid fa-piggy-bank fa-2x mb-2" style="color: #68c2e8;"></i>
           <div class="d-flex">
             <p class="pc-item-name fs-6">Original Principal</p>
@@ -50,7 +50,7 @@
           <p class="pc-item-data fs-5 fw-bold"><%= number_to_currency(@debt.original_principal, precision:0, unit:"¥") %></p>
       </div>
 
-      <div class="col-2 pc-info-card align-items-center">
+      <div class="col-12 col-md-6 col-xl-2 pc-info-card align-items-center">
         <i class="fa-solid fa-scale-balanced fa-2x mb-2" style="color: #8fd6c8;"></i>
         <div class="d-flex">
           <p class="pc-item-name fs-6">Remaining Principal</p>
@@ -59,7 +59,7 @@
         <p class="pc-item-data fs-5 fw-bold"><%= number_to_currency(option.debt.remaining_principal, precision:0, unit:"¥") %></p>
       </div>
 
-      <div class="col-2 pc-info-card align-items-center">
+      <div class="col-12 col-md-6 col-xl-2 pc-info-card align-items-center">
         <i class="fa-solid fa-pen-to-square fa-2x mb-2" style="color: #e6a98e;"></i>
         <div class="d-flex">
           <p class="pc-item-name fs-6">Total Payment Amount</p>
@@ -68,7 +68,7 @@
         <p class="pc-item-data fs-5 fw-bold"><%= number_to_currency(option.total_monthly_payment, precision:0, unit:"¥") %></p>
       </div>
 
-      <div class="col-2 pc-info-card align-items-center">
+      <div class="col-12 col-md-6 col-xl-2 pc-info-card align-items-center">
           <i class="fa-solid fa-percent fa-2x mb-2" style="color: #d26856;"></i>
           <div class="d-flex">
             <p class="pc-item-name fs-6">Interest Amount</p>
@@ -77,7 +77,7 @@
           <p class="pc-item-data fs-5 fw-bold"><%= number_to_currency(option.total_interest_amount, precision:0, unit:"¥") %></p>
       </div>
 
-      <div class="col-2 pc-info-card align-items-center">
+      <div class="col-12 col-md-6 col-xl-2 pc-info-card align-items-center">
           <i class="fa-regular fa-calendar-check fa-2x mb-2" style="color: #5a79af;"></i>
           <div class="d-flex">
             <p class="pc-item-name fs-6">Monthly Principal</p>
@@ -86,7 +86,7 @@
           <p class="pc-item-data fs-5 fw-bold"><%= number_to_currency(option.monthly_payment_principal, precision:0, unit:"¥") %></p>
         </div>
 
-        <div class="col-2 pc-info-card align-items-center">
+        <div class="col-12 col-md-6 col-xl-2 pc-info-card align-items-center">
           <i class="fa-regular fa-calendar-days fa-2x mb-2" style="color: #ff2e2e;"></i>
           <div class="d-flex">
             <p class="pc-item-name fs-6">Final Due Date</p>
@@ -95,8 +95,8 @@
           <p class="pc-item-data fs-5 fw-bold"><%= option.final_payment_date %></p>
         </div>
 
-        <div class="row">
-          <div class="col-4 pc-chart-sumarry">
+        <div class="row d-flex justify-content-center">
+          <div class="col-12 col-xl-4 pc-chart-sumarry">
             <i class="fa-solid fa-piggy-bank fa-2x mb-2" style="color: #68c2e8;"></i>
             <p class="fs-5">Points you need to understand about debt</p>
               <ul class="">
@@ -106,10 +106,10 @@
                 <%# <li>Why? this huge? Because the interest amount is calculated every month based on your remaining principal. Meaning paying too much interest.</li> %>
               </ul>
           </div>
-          <div class="col-4 pc-chart-balance d-flex align-items-center">
+          <div class="col-12 col-xl-4 pc-chart-balance d-flex align-items-center">
             <%= column_chart @data_all, colors: ["#78C1F3","#F94949"], title: "Changes on monthly payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded", stacked:true%>
           </div>
-          <div class="col-4 pc-chart-breakdown d-flex align-items-center">
+          <div class="col-12 col-xl-4 pc-chart-breakdown d-flex align-items-center">
             <%= pie_chart @progress_data, colors: ["#78C1F3","#F94949"], title: "Progress of Payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded",donut: true %>
             <%# <p><%= (option.debt.remaining_principal*100/@debt.original_principal) </p> %>
           </div>
@@ -117,8 +117,9 @@
       </div>
   <% end %>
   </div>
-
-  <%= link_to "View Debts List", debts_path, class: "btn btn-select mt-3 text-center" %>
+  <div class="d-flex justify-content-center">
+    <%= link_to "View Debts List", debts_path, class: "btn btn-select mt-3 text-center", style: "align-items: center;" %>
+  </div>
 </div>
 
 
