--- a/app/views/debts/show.html.erb
+++ b/app/views/debts/show.html.erb
@@ -94,7 +94,7 @@
         </div>
 
       <div class="row">
-        <div class="col-12 col-md-12 col-xl-4">
+        <div class="col-12 col-xl-4">
           <div class="pc-mini-select-card">
             <h4 class="fw-bold">Minimum Plan</h4>
             <p>You pay less for monthly payment, but takes longer and end up paying a lot.</p>
@@ -107,7 +107,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-12 col-xl-4">
+        <div class="col-12 col-xl-4">
           <div class="pc-standard-select-card">
             <h4 class="fw-bold">Standard Plan</h4>
             <p>You make moderate monthly payments, takes a moderate timeline to pay it off.</p>
@@ -120,7 +120,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-12 col-xl-4">
+        <div class="col-12 col-xl-4">
           <div class="pc-premium-select-card">
             <h4 class="fw-bold">Premium Plan</h4>
             <p>Your monthly payments are big, but takes a shorter timeline.</p>
