--- a/app/views/payment_options/dashboard.html.erb
+++ b/app/views/payment_options/dashboard.html.erb
@@ -9,7 +9,7 @@
     </div>
 
     <div class="row payment mt-3">
-      <div class="payment-date col-12">
+      <div class="payment-date col-12 col-lg-6">
         <% @selected_payment_options.each do |option| %>
           <% option.payments.each do |payment| %>
             <% if payment.status === 1 %>
@@ -20,7 +20,7 @@
             <% elsif payment.status === 3 %>
               <h5>You made it!!</h5>
             <% end %>
-            <div class="mt-3">
+            <div class="">
               <% if payment.status === 1 %>
                 <h6>Did you pay this Month?</h6>
                 <%= link_to "YES! I did!", payment_options_paid_path(debt_id: @debt.id, payment: true), data: { turbo: false }, class: "btn btn-select", style: "align-items: center;" %>
@@ -30,8 +30,12 @@
               <% end %>
             </div>
           <% end %>
-        <% end %>
       </div>
+      <div class="col-12 col-lg-6 pc-chart-breakdown d-flex align-items-center progress">
+        <span><%= ((((@debt.original_principal).to_f - (option.debt.remaining_principal).to_f)/@debt.original_principal)*100).floor %>%</span>
+        <%= pie_chart @progress_data, colors: ["#78C1F3","#F94949"], title: "Progress of Payment", class: "d-block w-90 shadow-sm p-3 rounded",donut: true %>
+      </div>
+      <% end %>
     </div>
 
 
@@ -101,17 +105,13 @@
             <p class="fs-5">Points you need to understand about debt</p>
               <ul class="">
                 <li>You borrowed <span class="principal-word"><%= number_to_currency(@debt.original_principal, precision: 0, unit:"¥") %></span>. you will end up paying <span class="total-amount-word"><%= number_to_currency(option.total_monthly_payment, precision:0, unit:"¥") %></span> with this plan.</li>
-                <li>It means you will be paying <span class="interest-word"><%= number_to_currency(@payment_options[3].total_monthly_payment - @debt.original_principal, precision:0, unit:"¥") %> as extra.</li>
+                <li>It means you will be paying <span class="interest-word"><%= number_to_currency(option.total_monthly_payment - @debt.original_principal, precision:0, unit:"¥") %> as extra.</li>
                 <li>Expected date you finish payoff is <%= option.final_payment_date %>.</li>
                 <%# <li>Why? this huge? Because the interest amount is calculated every month based on your remaining principal. Meaning paying too much interest.</li> %>
               </ul>
           </div>
           <div class="col-12 col-xl-4 pc-chart-balance d-flex align-items-center">
             <%= column_chart @data_all, colors: ["#78C1F3","#F94949"], title: "Changes on monthly payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded", stacked:true%>
-          </div>
-          <div class="col-12 col-xl-4 pc-chart-breakdown d-flex align-items-center">
-            <%= pie_chart @progress_data, colors: ["#78C1F3","#F94949"], title: "Progress of Payment", class: "d-block w-90 shadow-sm p-3 mb-1 rounded",donut: true %>
-            <%# <p><%= (option.debt.remaining_principal*100/@debt.original_principal) </p> %>
           </div>
         </div>
       </div>
