--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,6 +14,9 @@
           <li class="nav-item active">
             <%= link_to "Add Your Debt", new_debt_path, class: "nav-link" %>
           </li>
+          <li>
+            <%= link_to "Debts List", debts_path, class: "nav-link" %>
+          </li>
           <li class="nav-item">
           <% if current_user%>
           <%= link_to "Sign Out", destroy_user_session_path, class: "nav-link"%>
