--- a/app/assets/stylesheets/debts/_show.scss
+++ b/app/assets/stylesheets/debts/_show.scss
@@ -152,22 +152,36 @@ margin-bottom: 2.5%;
 
 .btn-select {
   background: linear-gradient(to right, #FFC93C, #ffe5a2);
-  width: 140px;
-  height: 60px;
   font-weight: bold;
   box-shadow: 3px 3px rgb(182, 182, 182);
   margin-top: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  padding: 20px;
   align-items: center;
+  width: fit-content
 }
 
 .btn-select:hover {
-  background-color: #FFC93C;
-  width: 140px;
-  height: 60px;
-  font-weight: bold;
+  background: #ebb736;
   box-shadow: 0 0 2px rgba(0,0,0,0.2);
+  transition: all 0.5s;
+}
+
+.btn-back {
+  background: #6c6c6c;
+  font-weight: bold;
+  box-shadow: 3px 3px rgb(182, 182, 182);
+  margin-top: 10px;
+  margin-bottom: 20px;
+  padding: 20px;
   align-items: center;
+  width: fit-content
+}
+
+.btn-back:hover {
+  background: #5a5a5a;
+  box-shadow: 0 0 2px rgba(0,0,0,0.2);
+  transition: all 0.5s;
 }
 
 .btn-plan-detail {
@@ -262,7 +276,7 @@ margin-bottom: 2.5%;
   margin-top: 10px;
   margin-right: 10px;
   margin-left:25px;
-  padding: 15px;
+  padding-top: 30px;
   border-radius: 15px;
 }
 
@@ -293,6 +307,12 @@ margin-bottom: 2.5%;
   font-weight: bold;
   font-size: larger;
 }
+
+.first-message {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
 // .modal-wrapper {
 //   z-index: 999;
 //   position: fixed;
