final UI updates

--- a/app/views/payment_options/dashboard.html.erb
+++ b/app/views/payment_options/dashboard.html.erb
@@ -38,13 +38,9 @@
       <% end %>
     </div>
 
-
-
-
-
 <% @selected_payment_options.each do |option| %>
   <div class="containr">
-    <div class="row d-flex justify-content-center pc-info-cards">
+    <div class="row d-flex justify-content-around pc-info-cards">
       <div class="col-12 col-md-6 col-xl-2 pc-info-card align-items-center">
           <i class="fa-solid fa-piggy-bank fa-2x mb-2" style="color: #68c2e8;"></i>
           <div class="d-flex">
