--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -7,7 +7,8 @@
     <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" } %>
+                as: :string,
+                input_html: { autocomplete: "email" }%>
   </div>
 
   <div class="form-actions">
